--- a/Backend/BackendLibrary/demo/Dockerfile
+++ b/Backend/BackendLibrary/demo/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:18-alpine
 
 WORKDIR /app
 
-COPY build/libs/tu-aplicacion.jar .
+COPY build/libs/demo-0.0.1-SNAPSHOT.jar .
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "tu-aplicacion.jar"]
+CMD ["java", "-jar", "demo-0.0.1-SNAPSHOT.jar"]
